--- a/.github/workflows/extra.yml
+++ b/.github/workflows/extra.yml
@@ -2,7 +2,7 @@ name: Extra Tests Workflow
 
 on:
   pull_request:
-    types: [labeled]
+    types: [labeled, synchronize]
 
 jobs:
   run-extra-tests:
